@@ -2,8 +2,7 @@ package Bot::IRC::X::WwwShorten;
 # ABSTRACT: Bot::IRC plugin for automatic URL shortening
 
 use 5.014;
-use strict;
-use warnings;
+use exact;
 
 use WWW::Shorten qw( TinyURL makeashorterlink );
 
